# test_ci_cd

./: CMakeLists.txt  PythonCommands.cpp  main.cpp  myPythonModule.cpp
.github/: cmake-multi-platform.yml
.github/workflows/: cmake-multi-platform.yml
